// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BatchCommandHandler Mesh 1`] = `
Object {
  "sphereId": Array [],
}
`;

exports[`BatchCommandHandler Mesh 2`] = `
Object {
  "sphereId": Object {
    "1": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [],
      "multiSwitch": Array [
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID1",
          "handle": "handle-CSID-1",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID2",
          "handle": "handle-CSID-2",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID3",
          "handle": "handle-CSID-3",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
      ],
      "other": Array [],
      "setSwitchState": Array [],
    },
    "2": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [],
      "multiSwitch": Array [
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID4",
          "handle": "handle-CSID-4",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
      ],
      "other": Array [],
      "setSwitchState": Array [],
    },
  },
}
`;

exports[`BatchCommandHandler Mesh 3`] = `
Object {
  "sphereId": Array [],
}
`;

exports[`BatchCommandHandler Mesh 4`] = `
Object {
  "sphereId": Object {
    "1": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID2",
          "handle": "handle-CSID-2",
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID3",
          "handle": "handle-CSID-3",
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
      ],
      "multiSwitch": Array [
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID1",
          "handle": "handle-CSID-1",
          "intent": 4,
          "promise": Object {
            "pending": true,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID2",
          "handle": "handle-CSID-2",
          "intent": 4,
          "promise": Object {
            "pending": true,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID3",
          "handle": "handle-CSID-3",
          "intent": 4,
          "promise": Object {
            "pending": true,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
      ],
      "other": Array [],
      "setSwitchState": Array [],
    },
    "2": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [],
      "multiSwitch": Array [
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID4",
          "handle": "handle-CSID-4",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
      ],
      "other": Array [],
      "setSwitchState": Array [],
    },
  },
}
`;

exports[`BatchCommandHandler Mesh 5`] = `
Object {
  "sphereId": Array [],
}
`;

exports[`BatchCommandHandler Mesh 6`] = `
Object {
  "sphereId": Object {
    "1": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID2",
          "handle": "handle-CSID-2",
          "promise": Object {
            "pending": true,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID3",
          "handle": "handle-CSID-3",
          "promise": Object {
            "pending": true,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID1",
          "handle": "handle-CSID-1",
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
        Object {
          "attempts": 1,
          "changeState": true,
          "cleanup": [Function],
          "crownstoneId": "CSID3",
          "handle": "handle-CSID-3",
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 150,
        },
      ],
      "multiSwitch": Array [],
      "other": Array [],
      "setSwitchState": Array [],
    },
    "2": Object {
      "keepAlive": Array [],
      "keepAliveState": Array [],
      "multiSwitch": Array [
        Object {
          "attempts": 1,
          "cleanup": [Function],
          "crownstoneId": "CSID4",
          "handle": "handle-CSID-4",
          "intent": 4,
          "promise": Object {
            "pending": false,
            "reject": [Function],
            "resolve": [Function],
          },
          "state": 1,
          "timeout": 0,
        },
      ],
      "other": Array [],
      "setSwitchState": Array [],
    },
  },
}
`;
